# --CppDev

./: .clang-tidy  Arrays(Cherno).cpp  Benchmarking.cpp  CMakeLists.txt  CharacterLiterals.cpp  FunctionPointers.cpp  LambdaFunction.cpp  LoopsandOther.cpp  MaximumInTheArray.cpp  OOPS.cpp  README.md  ReverseArr.cpp  StaticPolymorphism.cpp  Streams.cpp  Strings.cpp  StructuredBindings.cpp  TheRuleOfZeroThreeFive.cpp  UnionsAndFields.cpp  Vector.cpp  enums.cpp  exprsChap10.cpp  iterators.cpp  learntStatic_assert.cpp  linearsearchinArrays.cpp  namespace.cpp  pointers&refs.cpp  predictArray.cpp  variants.cpp  virtual&override.cpp
Concepts/: Alignment.cpp  ArrayProduct.cpp  Bool.cpp  CMakeLists.txt  CountArray.cpp  DiamondProblem.cpp  DumpFromChap11.cpp  Function.cpp  Functor.cpp  Functors.cpp  Functors_UC.cpp  MACROS.cpp  Maps.cpp  Pointers1.cpp  RTTI.cpp  References.cpp  Scoping.cpp  SecondMaxIntheArray.cpp  Structs.cpp  Variadics.cpp  Vector.cpp  Vectors.cpp  chronos.cpp  decltypes.cpp  duplicatesinArray.cpp  (+11 more)
DESIGN-PATTERNS/: AbstractFactory.cpp  AbstractFactory.h  Adapter.cpp  Adapter.h  Bridge.cpp  Bridge.h  Builder.cpp  Builder.h  CMakeLists.txt  ChainOfResponsibility.cpp  ChainOfResponsibility.h  Command.cpp  Command.h  Facade.cpp  Facade.h  FactoryMethod.cpp  FactoryMethod.h  Flyweight.cpp  Flyweight.h  Interpreter.cpp  Interpreter.h  Iterator.cpp  Iterator.h  Mediator.cpp  Mediator.h  Memento.cpp  Memento.h  Observer.cpp  Observer.h  Prototype.cpp  Prototype.h  Proxy.cpp  Proxy.h  Readme.md  Singleton.cpp  Singleton.h  State.cpp  State.h  Strategy.cpp  Strategy.h  (+4 more)
(+9 files in other folders)
